// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cytoscape > large 1`] = `
[
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q433773",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q333",
      "label": "astronomy",
    },
  },
  {
    "data": {
      "source": "Q433773",
      "target": "Q333",
    },
  },
  {
    "classes": [
      "cat",
    ],
    "data": {
      "id": "SCIENCE",
      "label": "Science",
    },
  },
  {
    "data": {
      "source": "Q333",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q364505",
    },
  },
  {
    "data": {
      "source": "Q364505",
      "target": "Q333",
    },
  },
  {
    "data": {
      "source": "Q333",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q200397",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q12483",
      "label": "statistics",
    },
  },
  {
    "data": {
      "source": "Q200397",
      "target": "Q12483",
    },
  },
  {
    "data": {
      "source": "Q12483",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q187258",
    },
  },
  {
    "data": {
      "source": "Q187258",
      "target": "Q333",
    },
  },
  {
    "data": {
      "source": "Q333",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q81130",
    },
  },
  {
    "data": {
      "source": "Q81130",
      "target": "Q333",
    },
  },
  {
    "data": {
      "source": "Q333",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q245355",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Lit",
      "id": "Q8242",
      "label": "literature",
    },
  },
  {
    "data": {
      "source": "Q245355",
      "target": "Q8242",
    },
  },
  {
    "classes": [
      "cat",
    ],
    "data": {
      "id": "LIT",
      "label": "Lit",
    },
  },
  {
    "data": {
      "source": "Q8242",
      "target": "LIT",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q247603",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q4",
      "label": "electrical engineering",
    },
  },
  {
    "data": {
      "source": "Q247603",
      "target": "Q4",
    },
  },
  {
    "data": {
      "source": "Q4",
      "target": "SCIENCE",
    },
  },
]
`;

exports[`Cytoscape > small 1`] = `
[
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q364505",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q333",
      "label": "astronomy",
    },
  },
  {
    "data": {
      "source": "Q364505",
      "target": "Q333",
    },
  },
  {
    "classes": [
      "cat",
    ],
    "data": {
      "id": "SCIENCE",
      "label": "Science",
    },
  },
  {
    "data": {
      "source": "Q333",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q200397",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q12483",
      "label": "statistics",
    },
  },
  {
    "data": {
      "source": "Q200397",
      "target": "Q12483",
    },
  },
  {
    "data": {
      "source": "Q12483",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Science",
      "id": "Q4",
      "label": "electrical engineering",
    },
  },
  {
    "data": {
      "source": "Q200397",
      "target": "Q4",
    },
  },
  {
    "data": {
      "source": "Q4",
      "target": "SCIENCE",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q245355",
    },
  },
  {
    "classes": [
      "field",
    ],
    "data": {
      "category": "Lit",
      "id": "Q8242",
      "label": "literature",
    },
  },
  {
    "data": {
      "source": "Q245355",
      "target": "Q8242",
    },
  },
  {
    "classes": [
      "cat",
    ],
    "data": {
      "id": "LIT",
      "label": "Lit",
    },
  },
  {
    "data": {
      "source": "Q8242",
      "target": "LIT",
    },
  },
  {
    "classes": [
      "person",
    ],
    "data": {
      "id": "Q247603",
    },
  },
  {
    "data": {
      "source": "Q247603",
      "target": "Q4",
    },
  },
  {
    "data": {
      "source": "Q4",
      "target": "SCIENCE",
    },
  },
]
`;
